--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "ruru": "^2.0.0-beta.11",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
